--- a/counter.html
+++ b/counter.html
@@ -13,11 +13,17 @@
             margin: 0;
             font-family: sans-serif;
             background-color: #f0f0f0;
+            color: #333;
         }
         #display {
             font-size: 10rem;
             font-weight: bold;
-            color: #333;
+        }
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #121212;
+                color: #e0e0e0;
+            }
         }
     </style>
 </head>
